[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "~1.10.25"
solana-sdk = "~1.10.25" 
solana-account-decoder = "~1.10.25"
solana-transaction-status = "~1.10.25"
cypher = { path="../../cypher-protocol/programs/cypher" }
cypher-tester = { path="../../cypher-protocol/tester" }
cypher-math = { path = "../../cypher-protocol/libraries/math" }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
anchor-lang = { git = "https://github.com/chugach-foundation/anchor.git", rev="8b75c1a" }
anchor-client = { git = "https://github.com/chugach-foundation/anchor.git", rev="8b75c1a" }
tokio = "1.14.1"
dashmap = "5.3.4"
base64 = "0.13.0"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
serde = "1.0.137"
serde_json = "1.0.81"
clap = { version = "3.0", features = ["derive"] }
log = "0.4.17"
chrono = "0.4.19"